update for django 1.5

--- a/faq/templates/faq/topic_detail.html
+++ b/faq/templates/faq/topic_detail.html
@@ -13,7 +13,7 @@
 
 
 {% block header %}
-  <a href="{% url faq-topic-list %}">{% trans "FAQ" %}</a> › {{ topic }}
+  <a href="{% url 'faq-topic-list' %}">{% trans "FAQ" %}</a> › {{ topic }}
 {% endblock %}
 
 
