--- a/faq/templates/faq/question_detail.html
+++ b/faq/templates/faq/question_detail.html
@@ -9,7 +9,7 @@
 
 
 {% block header %}
-  <a href="{% url faq-topic-list %}">{% trans "FAQ" %}</a> ›
+  <a href="{% url 'faq-topic-list' %}">{% trans "FAQ" %}</a> ›
   <a href="{{ topic.get_absolute_url }}">{{ topic }}</a> ›
   {{ question }}
 {% endblock %}
